<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/appsFragment"
        android:checked="true"
        android:icon="@drawable/baseline_apps_24"
        android:title="@string/apps" />

    <item
        android:id="@+id/mainFragment"
        android:checked="true"
        android:icon="@drawable/baseline_auto_awesome_24"
        android:title="@string/main" />

    <item
        android:id="@+id/messageFragment"
        android:checked="true"
        android:icon="@drawable/baseline_message_24"
        android:title="@string/message" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />
</menu>